# stock-screener-ml

./: .gitignore  LICENSE  README.md  TUTORIAL.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/screener/: cli.py  config.py  diagnostics.py  drift.py  labeling.py  pipeline.py  universe.py
backend/screener/api/: main.py
backend/screener/api/routers/: favorites.py  health.py  pipeline.py  portfolio.py  signals.py
backend/screener/db/: __init__.py  models.py  session.py
backend/screener/engine/: backtest.py  portfolio.py  screener.py
backend/screener/features/: __init__.py  builder.py  fundamental.py  macro.py  sentiment.py  technical.py  volatility.py
backend/screener/ingest/: edgar_8k.py  edgar_facts.py  fred.py  news.py  prices.py  sec.py
backend/screener/models/: explain.py  quality.py  registry.py  tactical.py
backend/tests/: test_drift.py  test_labeling.py  test_models.py  test_pit.py  test_portfolio.py  test_progress.py  test_sentiment.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AddPositionModal.tsx  FavoriteStar.tsx  GuidedTour.tsx  InfoTip.tsx  PipelineProgress.tsx  SignalDetail.tsx  ui.tsx
frontend/src/lib/: api.ts  format.ts  glossary.ts
frontend/src/pages/: Health.tsx  Opportunities.tsx  Portfolio.tsx
scripts/: _gen_icon.py  _run_server.bat  _stop_server.bat  detener.vbs  iniciar.vbs  instalar_accesos.ps1  register_task.ps1
