[project]
name = "sniper-screener"
version = "0.1.0"
description = "Stock screener personal impulsado por ML: pocas oportunidades de alta calidad"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "yfinance>=0.2.50",
    "fredapi>=0.5.2",
    "requests>=2.32",
    "lxml>=5.2",
    "shap>=0.46",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "joblib>=1.4",
]

[project.optional-dependencies]
sentiment = [
    "transformers>=4.44",
    "torch>=2.7",
]
drift = [
    "evidently>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["screener"]

[tool.pytest.ini_options]
testpaths = ["tests"]
